fix nav menu scrolling on mobile horizontal

--- a/src/components/HamburgerMenu/HamburgerMenu.scss
+++ b/src/components/HamburgerMenu/HamburgerMenu.scss
@@ -12,6 +12,7 @@
 }
 
 .dropdown-menu {
+  overflow-y: scroll;
   display: none;
   flex-direction: column;
   align-items: center;
